--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>About - Academy Website Template</title>
+	<title>STUDYVILLE 학원소개/이력</title>
 	<link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
